--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@reduxjs/toolkit": "^2.5.0",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
