--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
+    "@clerk/clerk-react": "^5.24.1",
     "@google/generative-ai": "^0.22.0",
-
     "@reduxjs/toolkit": "^2.5.0",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
