--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.24.1",
     "@google/generative-ai": "^0.22.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.8.2",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
