--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,7 +12,9 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/dist/$1"
+        "dest": "/dist/$1",
+        
       }
-    ]
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
   }
