--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,7 +12,14 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/index.html",
+      "headers": {
+        "cache-control": "s-maxage=1, stale-while-revalidate"
+      }
+    },
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
     }
   ]
 }
