--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.22.0",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.2",
+    "firebase": "^11.6.0",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
